--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -1,3 +1,8 @@
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
 # Uncomment the following line to enable deep sleep
 # CONFIG_ZMK_SLEEP=y
 
